***  Allow overriding Perl, Flex and Bison versions.  [by Robert Farrell]

***  Optimize variables set to constants within basic blocks for ~3%.

**** Default make no longer makes the docs; if you edit the documentation.
     sources, run "make info" to get them.

**** Optimize additional boolean identities (a|a = a, etc.)

**** Fix coredump when dotted cross-ref inside task call. [Eugene Weber]

* Verilator 3.610 09/20/2006

***  Verilator now works under DJGPP (Pentium GCC).  [John Stroebel]

**** Add default define for VL_PRINTF.  [John Stroebel]

**** Removed coverage request variable; see Coverage limitations in docs.

**** Fix DOS carrage returns in multiline defines.  [Ralf Karge]

**** Fix printf format warnings on 64-bit linux.

* Verilator 3.602 09/11/2006 Stable

**** Fix function references under top inlined module.  [David Hewson]

* Verilator 3.601 09/06/2006 Beta

***  Added --inhibit-sim flag for environments using old __Vm_inhibitSim.

***  Added `systemc_dtor for destructor extentions.  [Allan Cochrane]

***  Added -MP to make phony dependencies, ala GCC's.

***  Changed how internal functions are invoked to reduce aliasing.
     Useful when using GCC's -O2 or -fstrict-aliasing, to gain another ~4%.

**** Fix memory leak when destroying modules.  [John Stroebel]

**** Fix coredump when unused modules have unused cells.  [David Hewson]

**** Fix 3.600 internal error with arrayed instances.  [David Hewson]

**** Fix 3.600 internal error with non-unrolled function loops.  [David Hewson]

**** Fix $display %m name not matching Verilog name inside SystemC modules.

**** Declare optimized lookup tables as 'static', to reduce D-Cache miss rate.

* Verilator 3.600 08/28/2006 Beta

**   Support dotted cross-hierarchy variable and task references.

**** Lint for x's in generate case statements.

**** Fix line numbers being off by one when first file starts with newline.

**** Fix naming of generate for blocks to prevent non-inline name conflict.
